# iris_shield

./: .gitignore  README.md  config.py  main.py  pyproject.toml
core/: __init__.py  background_protector.py  blip_attack.py  clip_attack.py  ensemble_cloaker.py
ui/: __init__.py  components.py  dashboard.py  styles.py
utils/: __init__.py  image_utils.py
